# polymarket-lp

./: .gitignore  Cargo.toml  README.md  claude.md  config.conservative.toml  config.example.toml  plan.md
src/: client.rs  config.rs  engine.rs  inventory.rs  main.rs  manager.rs  metrics.rs  orders.rs  quoter.rs  risk.rs  scanner.rs  ws.rs
