[package]
name = "polymarket-lp"
version = "0.1.0"
edition = "2024"

[dependencies]
polymarket-client-sdk = { version = "0.4", features = ["clob", "ws", "gamma", "data", "heartbeats", "ctf", "tracing"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rust_decimal = "1"
rust_decimal_macros = "1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
